--- a/style.css
+++ b/style.css
@@ -158,6 +158,14 @@ input[type="radio"] {
 
 .rise {
     background-color: #eeeeee;
+    margin: 20px auto;
+    width: 1000px;
+    border-radius: 10%;
+    transition: box-shadow 0.5s;
+}
+
+.rise:hover {
+    box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.226);
 }
 
 footer {
